

	* Version 3.2.10 released.

	* Fixed a bug in queries that contain variables that exist inside 
	  spatial functions in select and do not exist in the where clause 
	  made Strabon throw a NULL pointer exception.
	  (bug #51 https://bug.strabon.di.uoa.gr/ticket/51)

	* Various changes in the interface and behavior of Strabon Endpoint:
	  - Revised the logos and the sample queries.
	  - Results query limit is set to zero (unlimited).
	  - Users can now store RDF data that is present in a file on the
	    client side (the file is uploaded to the server).
	  - Credentials are now required for uploading files or executing
	    UPDATE queries, unless Strabon Endpoint runs locally (localhost).
	  - When viewing the results of queries in HTML, any URI is now an
	    active link to itself. Previously, that URI was being DESCRIBEd
	    and one was being transferred to a page viewing the result of the
	    DESCRIBE query.
	  - The DESCRIBE functionality can now be accessed through the menu bar.
	
	* Fixed a bug where strdf:intersection function did not work as an
	aggregate when used without 'GROUP BY'.
	(bug #46 https://bug.strabon.di.uoa.gr/ticket/46)

Sat Oct 19 23:37:23 2013   Pyravlos Team

	* Version 3.2.9 released.

	* Added support for the following google chart types: PieChart, 
	AreaChart and ColumnChart to strabon endpoint. 
	
	* Added Timemap as new results format in Strabon endpoint. This 
	option displays results in a map and a timeline on the same time, 
	using the Timemap js library (http://code.google.com/p/timemap/).
	The KMLWriter has been extended for that purpose, by transforming
	dateTime values that are included in the result set into the respective
	TimeStamp KML primitive (https://developers.google.com/kml/documentation/time). 
	In the "temporals" branch, the values of the strdf:period datatype 
	are converted into the respective KML TimeSpan primitive. 
	
	* Added extension function <http://postgis.net/ST_Centroid> which is