@@ -2,6 +2,10 @@
 
 	* Version 3.2.10 released.
 
+	* Altered default SRID to GeoSPARQL SRID: Geometries with wktLiteral 
+	datatype in SPARQL queries were not interpreted in the correct CRS.
+	(bug #44 http://bug.strabon.di.uoa.gr/ticket/44)
+
 	* Fixed a bug in queries that contain variables that exist inside 
 	  spatial functions in select and do not exist in the where clause 
 	  made Strabon throw a NULL pointer exception.
@@ -23,6 +27,7 @@
 	* Fixed a bug where strdf:intersection function did not work as an
 	aggregate when used without 'GROUP BY'.
 	(bug #46 https://bug.strabon.di.uoa.gr/ticket/46)
+
 
 Sat Oct 19 23:37:23 2013   Pyravlos Team
 
